--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -53,4 +53,28 @@ body {
 
 body {
   font-family: 'Google Sans Flex', sans-serif;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;    
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;            
 }
